--- a/estilo.css
+++ b/estilo.css
@@ -10,7 +10,7 @@ html {
 }
 body {
   background-color: #ffffff;
-  background-image: url(/Portifolio_OF/background.png);
+  background-image: url(background.png);
   background-attachment: fixed;
   background-size: cover;
 
